--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,11 +79,12 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply scroll-smooth;
+  }
   body {
-    @apply bg-background text-foreground;
     font-family: var(--font-pt-sans);
   }
-
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-literata);
   }
